--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,9 @@
+body{
+    height: 100vh;
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(232, 182, 82));
+    overflow-y: hidden;
+}
+
 .logo{
     width: 50px;
     height: 50px;
@@ -5,23 +11,31 @@
     display: block;
 }
 
-body{
-    height: 100vh;
-    background-color: linear-gradient(rgb(255, 255, 255), rgb(222, 179, 94));
+h1{
+    margin-top: 12px;
+    text-align: center;
+    font-size: 30px;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
 }
 
-.container{
+.outer{
     max-width: 955px;
+    border: 2px solid black;
+    border-radius: 15px;
     background-color: white;
     margin: auto;
     height: 60vh;
-    padding: 33px;
+    padding: 5px;
     overflow-y: auto;
     margin-bottom: 23px;
 }
 
+.container{
+    height: 58vh;
+    overflow-y: auto;
+}
+
 .message{
-    /* background-color: rgb(192, 168, 168); */
     width: 24%;
     padding: 10px;
     margin: 17px 12px;
@@ -29,36 +43,69 @@ body{
     border-radius: 10px;
 }
 
+.message-center{
+    width: 24%;
+    padding: 10px;
+    margin: 5px auto;
+    border: 2px solid black;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #3ae39d;
+    clear: both;
+}
+
+.message-center-leave{
+    width: 24%;
+    padding: 10px;
+    margin: 5px auto;
+    border: 2px solid black;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #d88067;
+    clear: both;
+}
+
 .left{
     float: left;
     clear: both;
-    background-color: silver;
+    background-color: rgb(225, 167, 102);
 }
 
 .right{
     float: right;
     clear: both;
-    background-color: teal;
+    background-color: #3ae3d1;
 }
 
-#send_container{
-    display: block;
+#send-container{
+    display: flex;
     margin: auto;
+    align-items: center;
     text-align: center;
-    max-width: 985px;
+    max-width: 1085px;
     width: 100%;
+    justify-content: space-evenly;
 }
 
 #messageInp{
-    width: 92%;
+    width: 80%;
     border: 2px solid black;
     border-radius: 6px;
     height: 34px;
+    font-size: 22px;
+    padding: 10px;
 }
 
 .btn{
     cursor: pointer;
     border: 2px solid black;
     border-radius: 6px;
-    height: 34px ;
+    height: 50px;
+    font-size: large;
+    width: 100px;
+    padding: 12px;
 }
